Migrated to Maven and JavaFX